chore(package): fix json

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "homepage": "https://github.com/clappr/clappr-tvs-key-mapping-plugin",
   "bugs": {
-    "url": "https://github.com/clappr/clappr-tvs-key-mapping-plugin/issues",
+    "url": "https://github.com/clappr/clappr-tvs-key-mapping-plugin/issues"
   },
   "license": "BSD-3-Clause",
   "author": {
